[package]
name = "phantom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_Kernel"] }

[profile.release]
opt-level = "z"
debug = 0
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "thin"
panic = "abort"
codegen-units = 1
rpath = false
incremental = false

[profile.dev]
debug-assertions = false
incremental = false